fixing visibility issues

--- a/static/meal_planner_styles.css
+++ b/static/meal_planner_styles.css
@@ -59,6 +59,10 @@ body {
     margin: auto;
 }
 
+.login {
+    text-align: center;
+}
+
 /*
 .recipe_card {
     border-style: double;
